# MBO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mbox_main.cpp
include/: config.h  initial_drop_on_flat_surface.h  initial_drop_on_rough_surface.h  initial_elliptic_drop_in_the_air.h  runtime_parameters.h  simulator.h
input/: README
